@@ -1,0 +1,5 @@
+nclones <-
+function(x)
+{
+    attr(x, "n.clones")
+}
